--- a/client/src/app/components/instrument/instrument-list/instrument-list.component.html
+++ b/client/src/app/components/instrument/instrument-list/instrument-list.component.html
@@ -5,58 +5,58 @@
 			<div class="unselectable data-table-header-row flex-container" fxLayout="row">
 				<div class="truncate flex-item" fxFlex (click)="sortBy('serialNumber')">
 					<span class="data-table-header-label-sortable">Serial Number</span>
-					<md-icon class="data-table-header-sort" [ngClass]="{
-						'data-table-header-sort-reverse':sort.reversed,
-						'data-table-header-sort-inactive':sort.current !== 'serialNumber'}">
+					<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+						'data-table-header-sort-arrow-reverse':sort.reversed,
+						'data-table-header-sort-arrow-inactive':sort.current !== 'serialNumber'}">
 						arrow_downward</md-icon>
 				</div>
 				<div class="truncate flex-item" fxFlex (click)="sortBy('instrumentType')">
 					<span class="data-table-header-label-sortable">Equipment Type</span>
-					<md-icon class="data-table-header-sort" [ngClass]="{
-						'data-table-header-sort-reverse':sort.reversed,
-						'data-table-header-sort-inactive':sort.current !== 'instrumentType'}">
+					<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+						'data-table-header-sort-arrow-reverse':sort.reversed,
+						'data-table-header-sort-arrow-inactive':sort.current !== 'instrumentType'}">
 						arrow_downward</md-icon>
 				</div>
 				<div class="truncate flex-item" fxFlex (click)="sortBy('instrumentStatus')">
 					<span class="data-table-header-label-sortable">Status</span>
-					<md-icon class="data-table-header-sort" [ngClass]="{
-						'data-table-header-sort-reverse':sort.reversed,
-						'data-table-header-sort-inactive':sort.current !== 'instrumentStatus'}">
+					<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+						'data-table-header-sort-arrow-reverse':sort.reversed,
+						'data-table-header-sort-arrow-inactive':sort.current !== 'instrumentStatus'}">
 						arrow_downward</md-icon>
 				</div>
 				<div class="truncate flex-item" fxFlex (click)="sortBy('serviceDueDate')">
 					<span class="data-table-header-label-sortable">Service Due Date</span>
-					<md-icon class="data-table-header-sort" [ngClass]="{
-						'data-table-header-sort-reverse':sort.reversed,
-						'data-table-header-sort-inactive':sort.current !== 'serviceDueDate'}">
+					<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+						'data-table-header-sort-arrow-reverse':sort.reversed,
+						'data-table-header-sort-arrow-inactive':sort.current !== 'serviceDueDate'}">
 						arrow_downward</md-icon>
 				</div>
 				<div class="truncate flex-item" fxFlex (click)="sortBy('lastServiceDate')">
 					<span class="data-table-header-label-sortable">Last Service Date</span>
-					<md-icon class="data-table-header-sort" [ngClass]="{
-						'data-table-header-sort-reverse':sort.reversed,
-						'data-table-header-sort-inactive':sort.current !== 'lastServiceDate'}">
+					<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+						'data-table-header-sort-arrow-reverse':sort.reversed,
+						'data-table-header-sort-arrow-inactive':sort.current !== 'lastServiceDate'}">
 						arrow_downward</md-icon>
 				</div>
 				<div class="truncate flex-item" fxFlex (click)="sortBy('purchaseDate')">
 					<span class="data-table-header-label-sortable">Purchased Date</span>
-					<md-icon class="data-table-header-sort" [ngClass]="{
-						'data-table-header-sort-reverse':sort.reversed,
-						'data-table-header-sort-inactive':sort.current !== 'purchaseDate'}">
+					<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+						'data-table-header-sort-arrow-reverse':sort.reversed,
+						'data-table-header-sort-arrow-inactive':sort.current !== 'purchaseDate'}">
 						arrow_downward</md-icon>
 				</div>
 				<div class="truncate flex-item" fxFlex (click)="sortBy('site')">
 					<span class="data-table-header-label-sortable">Assigned Site</span>
-					<md-icon class="data-table-header-sort" [ngClass]="{
-						'data-table-header-sort-reverse':sort.reversed,
-						'data-table-header-sort-inactive':sort.current !== 'site'}">
+					<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+						'data-table-header-sort-arrow-reverse':sort.reversed,
+						'data-table-header-sort-arrow-inactive':sort.current !== 'site'}">
 						arrow_downward</md-icon>
 				</div>
 				<div class="truncate flex-item" fxFlex (click)="sortBy('inventoryNumber')">
 					<span class="data-table-header-label-sortable">City Inventory No.</span>
-					<md-icon class="data-table-header-sort" [ngClass]="{
-						'data-table-header-sort-reverse':sort.reversed,
-						'data-table-header-sort-inactive':sort.current !== 'inventoryNumber'}">
+					<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+						'data-table-header-sort-arrow-reverse':sort.reversed,
+						'data-table-header-sort-arrow-inactive':sort.current !== 'inventoryNumber'}">
 						arrow_downward</md-icon>
 				</div>
 				<div class="truncate flex-item" fxFlex="25">
