--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -3,7 +3,7 @@
 $navbar-height: 64px;
 
 html {
-    font-family: Roboto,"Helvetica Neue",sans-serif;
+    font-family: Roboto, sans-serif;
     height: 100%;
     body {
         margin: 0;
@@ -71,10 +71,12 @@ a {
 
 .section-single {
     margin: 24px;
+    padding: 0 !important;
 }
 
 .section-multiple {
     margin: 12px;
+    padding: 0 !important;
 }
 
 .section-multiple-container {
@@ -86,11 +88,13 @@ a {
 .section-title {
     font-weight: normal;
     font-size: 1.337rem;
+    padding: 24px;
 }
 
 .section-subtitle {
     font-weight: lighter;
     font-size: 1.0rem;
+    padding: 24px;
 }
 
 .section-form-container {
@@ -103,7 +107,8 @@ a {
 }
 
 .data-table {
-    padding: 16px;
+    //padding: 16px 0;
+    //margin: 0 -24px;
 }
 
 .data-table-super-header-row {
@@ -113,57 +118,84 @@ a {
 }
 
 .data-table-header-row {
+    font-size: 12px;
+    color: rgba(0,0,0,0.54);
+    font-weight: 500;
+    height: 56px;
     text-align: left;
-    font-weight: bold;
-    height: 41px;
-    border-bottom: solid 1px #DDD;
+    border-bottom: solid 1px #E0E0E0;
 }
 
 .data-table-header-label {
     position: relative;
-    top: 11px;
+    top: 21px;
 }
 
 .data-table-header-label-sortable {
+    position: relative;
+    top: 16px;
     pointer-events: all;
     cursor: pointer;
 }
 
-.data-table-header-sort {
+.data-table-header-label-sorted {
+    color: rgba(0,0,0,0.87);
+}
+
+.data-table-header-sort-arrow {
+    font-size: 16px;
+    color: rgba(0,0,0,0.87);
+    height: 16px !important;
+    width: 16px !important;
     position: relative;
-    top: 6px;
+    top: 19px;
     transition: transform 0.2s ease-in-out;
     pointer-events: all;
     cursor: pointer;
 }
 
-.data-table-header-sort-reverse {
+.data-table-header-sort-arrow-reverse {
     transform: rotate(-180deg);
 }
 
-.data-table-header-sort-inactive {
+.data-table-header-sort-arrow-inactive {
     visibility: hidden;
     transform: rotate(-90deg);
 }
 
+.data-table-first-column {
+    margin-left: 24px;
+    margin-right: 28px;
+}
+
+.data-table-column {
+    margin-left: 28px;
+    margin-right: 28px;
+}
+
+.data-table-last-column {
+    margin-left: 28px;
+    margin-right: 24px;
+}
+
 .data-table-row {
-    height: 54px;
-    padding-top: 18px;
-    background: #F7F7F7;
+    font-size: 13px;
+    color: rgba(0,0,0,0.87);
+    border-bottom: 1px solid #E0E0E0;
+    font-weight: 400;
+    height: 48px;
+    padding-top: 16px;
+    background: #FFF;
     transition: background 0.1s linear;
 }
 
-.data-table-odd-row {
-    background: #FFF;
+.data-table-row:hover {
+    background: #EEEEEE;
 }
 
-// .data-table-row:hover {
-//     background: #E7E7E7;
-// }
-
-// .data-table-odd-row:hover {
-//     background: #EEE;
-// }
+.data-table-row-active {
+    background: #F5F5F5;
+}
 
 .data-table-icon-button {
     margin-top: -4px;
