--- a/client/src/app/components/instrument/instrument-type/instrument-type.component.html
+++ b/client/src/app/components/instrument/instrument-type/instrument-type.component.html
@@ -59,16 +59,16 @@
 						<div class="unselectable data-table-header-row flex-container" fxLayout="row">
 							<div class="truncate flex-item" fxFlex (click)="sortBy('serialNumber')">
 								<span class="data-table-header-label-sortable">Serial Number</span>
-								<md-icon class="data-table-header-sort" [ngClass]="{
-									'data-table-header-sort-reverse':sort.reversed,
-									'data-table-header-sort-inactive':sort.current !== 'serialNumber'}">
+								<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+									'data-table-header-sort-arrow-reverse':sort.reversed,
+									'data-table-header-sort-arrow-inactive':sort.current !== 'serialNumber'}">
 									arrow_downward</md-icon>
 							</div>
 							<div class="truncate flex-item" fxFlex (click)="sortBy('instrumentStatus')">
 								<span class="data-table-header-label-sortable">Status</span>
-								<md-icon class="data-table-header-sort" [ngClass]="{
-									'data-table-header-sort-reverse':sort.reversed,
-									'data-table-header-sort-inactive':sort.current !== 'instrumentStatus'}">
+								<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+									'data-table-header-sort-arrow-reverse':sort.reversed,
+									'data-table-header-sort-arrow-inactive':sort.current !== 'instrumentStatus'}">
 									arrow_downward</md-icon>
 							</div>
 							<div class="truncate flex-item" fxFlex="40">
