--- a/client/src/app/components/directives/pagination/pagination.component.scss
+++ b/client/src/app/components/directives/pagination/pagination.component.scss
@@ -5,3 +5,14 @@
 	height: 56px;
 	text-align: right;
 }
+
+.pagination-nav-button {
+	width: 24px;
+	height: 24px;
+	margin-right: 24px;
+}
+
+.pagination-nav-button-icon {
+	position: relative;
+	top: -10px;
+}
