--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -18,6 +18,10 @@ md-sidenav-container {
     .mat-sidenav-opened {
         box-shadow: 3px 0 6px rgba(0,0,0,0.24) !important;
     }
+    .mat-sidenav-backdrop.mat-sidenav-shown {
+        background-color: rgba(0,0,0,0.6) !important;
+        opacity: 0.48;
+    }
 }
 
 md-toolbar-row {
