--- a/client/src/app/components/navigation/navigation-base/navigation-base.component.html
+++ b/client/src/app/components/navigation/navigation-base/navigation-base.component.html
@@ -16,8 +16,8 @@
 	</div>
 	<div class="navbar-shadow"></div>
 </md-toolbar>
-<md-sidenav-container fullscreen>
-	<md-sidenav #sidenav mode="over" opened="false" class="sidenav-contents">
+<md-sidenav-container fullscreen class="primary-sidenav-container">
+	<md-sidenav #sidenav mode="side" opened="true" class="sidenav-contents">
 		<div >
 			<div class="nav-logo">
 				<div>
