--- a/client/src/app/components/directives/pagination/pagination.component.scss
+++ b/client/src/app/components/directives/pagination/pagination.component.scss
@@ -4,6 +4,7 @@
 	font-weight: 500;
 	height: 56px;
 	text-align: right;
+	border-top: 1px solid #E0E0E0;
 }
 
 .pagination-nav-button {
@@ -14,5 +15,5 @@
 
 .pagination-nav-button-icon {
 	position: relative;
-	top: -10px;
+	top: -9px; // Different for all browsers...
 }
