--- a/client/src/app/components/user/user-list/user-list.component.html
+++ b/client/src/app/components/user/user-list/user-list.component.html
@@ -1,95 +1,107 @@
-<md-card class="section-single">
-	<md-card-title>
-		<div class="section-title">Manage Users</div>
-	</md-card-title>
-	<md-card-content>
-		<div *ngIf="!isDataLoaded" class="loading-indicator-container">
-			<md-spinner class="loading-indicator-spinner"></md-spinner>
-			<div class="loading-indicator-message">{{loadingMessage}}</div>
-		</div>
-		<div *ngIf="isDataLoaded" class="data-table">
-			<div class="unselectable data-table-header-row flex-container" fxLayout="row">
-				<div class="data-table-first-column truncate flex-item" fxFlex="10" (click)="sortBy('username')">
-					<span class="data-table-header-label-sortable" [ngClass]="{
-						'data-table-header-label-sorted':sort.current == 'username'}">
-						Username
-					</span>
-					<md-icon class="data-table-header-sort-arrow" [ngClass]="{
-						'data-table-header-sort-arrow-reverse':sort.reversed,
-						'data-table-header-sort-arrow-inactive':sort.current !== 'username'}">
-						arrow_downward
-					</md-icon>
-				</div>
-				<div class="data-table-column truncate flex-item" fxFlex="13" (click)="sortBy('name')">
-					<span class="data-table-header-label-sortable" [ngClass]="{
-						'data-table-header-label-sorted':sort.current == 'name'}">
-						Name
-					</span>
-					<md-icon class="data-table-header-sort-arrow" [ngClass]="{
-						'data-table-header-sort-arrow-reverse':sort.reversed,
-						'data-table-header-sort-arrow-inactive':sort.current !== 'name'}">
-						arrow_downward
-					</md-icon>
-				</div>
-				<div class="data-table-column truncate flex-item" fxFlex (click)="sortBy('emailAddress')">
-					<span class="data-table-header-label-sortable" [ngClass]="{
-						'data-table-header-label-sorted':sort.current == 'emailAddress'}">
-						Email
-					</span>
-					<md-icon class="data-table-header-sort-arrow" [ngClass]="{
-						'data-table-header-sort-arrow-reverse':sort.reversed,
-						'data-table-header-sort-arrow-inactive':sort.current !== 'emailAddress'}">
-						arrow_downward
-					</md-icon>
-				</div>
-				<div class="data-table-column truncate flex-item" fxFlex="13" (click)="sortBy('employeeId')">
-					<span class="data-table-header-label-sortable" [ngClass]="{
-						'data-table-header-label-sorted':sort.current == 'employeeId'}">
-						Employee ID
-					</span>
-					<md-icon class="data-table-header-sort-arrow" [ngClass]="{
-						'data-table-header-sort-arrow-reverse':sort.reversed,
-						'data-table-header-sort-arrow-inactive':sort.current !== 'employeeId'}">
-						arrow_downward
-					</md-icon>
-				</div>
-				<div class="data-table-last-column truncate flex-item" fxFlex="40px" style="text-align:center;">
-					<span class="data-table-header-label">Active</span>
-				</div>
+<md-sidenav-container fullscreen>
+	<md-sidenav #sideinfo mode="side" align="end" (opened)="sideInfoOpen">Drawer content</md-sidenav>
+	<!--<md-card class="section-single">
+		<md-card-title>
+			
+		</md-card-title>
+		<md-card-content>-->
+		<div style="height:calc(100% - 76px);">
+			<div class="flex-container" fxLayout="row" fxLayoutAlign="space-between start">
+				<div class="section-title flex-item" fxFlex>Manage Users</div>
+				<button md-icon-button (click)="toggleSideInfo()" class="flex-item" fxFlex="40px">
+					<md-icon>{{sideInfoOpen ? 'chevron_right' : 'chevron_left'}}</md-icon>
+				</button>
 			</div>
-			<div *ngFor="let user of users; let idx = index">
-				<div *ngIf="idx >= (pagination.currentPage - 1) * pagination.displayedRows && idx < pagination.currentPage * pagination.displayedRows"
-					class="data-table-row flex-container" 
-					fxLayout="row">
-					<div class="data-table-first-column truncate flex-item" fxFlex="10">
-						<a [routerLink]="'../user/' + user.username" routerLikeActive="active">
-							{{user.username}}
-						</a>
+			<div *ngIf="!isDataLoaded" class="loading-indicator-container">
+				<md-spinner class="loading-indicator-spinner"></md-spinner>
+				<div class="loading-indicator-message">{{loadingMessage}}</div>
+			</div>
+			<div *ngIf="isDataLoaded" class="data-table-scrollable">
+				<div class="unselectable data-table-header-row flex-container" fxLayout="row">
+					<div class="data-table-first-column truncate flex-item" fxFlex="10" (click)="sortBy('username')">
+						<span class="data-table-header-label-sortable" [ngClass]="{
+							'data-table-header-label-sorted':sort.current == 'username'}">
+							Username
+						</span>
+						<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+							'data-table-header-sort-arrow-reverse':sort.reversed,
+							'data-table-header-sort-arrow-inactive':sort.current !== 'username'}">
+							arrow_downward
+						</md-icon>
 					</div>
-					<div class="data-table-column truncate flex-item" fxFlex="13">
-						{{stringUtils.formatUserName(user)}}
+					<div class="data-table-column truncate flex-item" fxFlex="13" (click)="sortBy('name')">
+						<span class="data-table-header-label-sortable" [ngClass]="{
+							'data-table-header-label-sorted':sort.current == 'name'}">
+							Name
+						</span>
+						<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+							'data-table-header-sort-arrow-reverse':sort.reversed,
+							'data-table-header-sort-arrow-inactive':sort.current !== 'name'}">
+							arrow_downward
+						</md-icon>
 					</div>
-					<div class="data-table-column truncate flex-item" fxFlex>
-						{{user.emailAddress}}
+					<div class="data-table-column truncate flex-item" fxFlex (click)="sortBy('emailAddress')">
+						<span class="data-table-header-label-sortable" [ngClass]="{
+							'data-table-header-label-sorted':sort.current == 'emailAddress'}">
+							Email
+						</span>
+						<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+							'data-table-header-sort-arrow-reverse':sort.reversed,
+							'data-table-header-sort-arrow-inactive':sort.current !== 'emailAddress'}">
+							arrow_downward
+						</md-icon>
 					</div>
-					<div class="data-table-column truncate flex-item" fxFlex="13">
-						{{user.employeeId}}
+					<div class="data-table-column truncate flex-item" fxFlex="13" (click)="sortBy('employeeId')">
+						<span class="data-table-header-label-sortable" [ngClass]="{
+							'data-table-header-label-sorted':sort.current == 'employeeId'}">
+							Employee ID
+						</span>
+						<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+							'data-table-header-sort-arrow-reverse':sort.reversed,
+							'data-table-header-sort-arrow-inactive':sort.current !== 'employeeId'}">
+							arrow_downward
+						</md-icon>
 					</div>
-					<div class="data-table-last-column flex-item" fxFlex="40px" style="text-align:center;">
-						<md-icon *ngIf="user.enabled" style="color:#0D0;margin-top:-4px;">check</md-icon>
-						<md-icon *ngIf="!user.enabled" style="color:#D00;margin-top:-4px;">close</md-icon>
+					<div class="data-table-last-column truncate flex-item" fxFlex="40px" style="text-align:center;">
+						<span class="data-table-header-label">Active</span>
 					</div>
 				</div>
+				<div #hello class="data-table-scrollable-area">
+					<div *ngFor="let user of users; let idx = index" class="data-table-row">
+						<div *ngIf="idx >= (pagination.currentPage - 1) * pagination.displayedRows && idx < pagination.currentPage * pagination.displayedRows"
+							class="data-table-row-content" flex-container 
+							fxLayout="row">
+							<div class="data-table-first-column truncate flex-item" fxFlex="10">
+								<a [routerLink]="'../user/' + user.username" routerLikeActive="active">
+									{{user.username}}
+								</a>
+							</div>
+							<div class="data-table-column truncate flex-item" fxFlex="13">
+								{{stringUtils.formatUserName(user)}}
+							</div>
+							<div class="data-table-column truncate flex-item" fxFlex>
+								{{user.emailAddress}}
+							</div>
+							<div class="data-table-column truncate flex-item" fxFlex="13">
+								{{user.employeeId}}
+							</div>
+							<div class="data-table-last-column flex-item" fxFlex="40px" style="text-align:center;">
+								<md-icon *ngIf="user.enabled" style="color:#0D0;margin-top:-4px;">check</md-icon>
+								<md-icon *ngIf="!user.enabled" style="color:#D00;margin-top:-4px;">close</md-icon>
+							</div>
+						</div>
+					</div>
+				</div>
+				<app-pagination [pagination]="pagination" 
+					[totalRows]="users.length" 
+					[showPageSelector]="true" 
+					[showFirstLastPage]="true">
+				</app-pagination>
 			</div>
-			<app-pagination [pagination]="pagination" 
-				[totalRows]="users.length" 
-				[showPageSelector]="true" 
-				[showFirstLastPage]="true">
-			</app-pagination>
 		</div>
-	</md-card-content>
-</md-card>
-<div>{{pagination.displayedRows}}</div>
+		<!--</md-card-content>
+	</md-card>-->
+</md-sidenav-container>
 <div class="fab-action-button-container">
 	<button md-fab (click)="openNewUserDialog()" mdTooltip="New User" mdTooltipPosition="above">
 		<md-icon>add</md-icon>
