--- a/client/src/app/components/directives/pagination/pagination.component.html
+++ b/client/src/app/components/directives/pagination/pagination.component.html
@@ -22,7 +22,7 @@
 		<md-option *ngFor="let i of displayedRowsSelection" [value]="i">{{i}}</md-option>
 	</md-select>
 	<div class="flex-item" style="margin:0 32px;" fxFlex="80px">
-		{{displayedRange.min}}-{{displayedRange.max}} of {{totalRows}}
+		{{displayedRange.min}}-{{displayedRange.max}} of {{pagination.totalRows}}
 	</div>
 	<button md-icon-button 
 		*ngIf="showFirstLastPage" 
