--- a/client/src/app/components/instantaneous/ime-number/ime-number.component.html
+++ b/client/src/app/components/instantaneous/ime-number/ime-number.component.html
@@ -32,7 +32,7 @@
 		</md-card>
 	</div>
 </div>
-<div class="fab-action-button-container">
+<div class="fab-bottom-container">
 	<button md-fab (click)="save()" mdTooltip="Save" mdTooltipPosition="above" class="fab-action-button">
 		<md-icon>save</md-icon>
 	</button>
