--- a/client/src/app/components/instrument/instrument-list/instrument-list.component.html
+++ b/client/src/app/components/instrument/instrument-list/instrument-list.component.html
@@ -97,7 +97,7 @@
 		</div>
 	</md-card-content>
 </md-card>
-<div class="fab-action-button-container">
+<div class="fab-bottom-container">
 	<button md-fab (click)="openNewInstrumentDialog()" mdTooltip="Create Equipment Type" mdTooltipPosition="above">
 		<md-icon>add</md-icon>
 	</button>
