--- a/client/src/app/components/instrument/instrument/instrument.component.html
+++ b/client/src/app/components/instrument/instrument/instrument.component.html
@@ -36,7 +36,7 @@
 		</div>
 	</md-card-content>
 </md-card>
-<div class="fab-action-button-container">
+<div class="fab-bottom-container">
 	<button md-fab (click)="save()" mdTooltip="Save" mdTooltipPosition="above">
 		<md-icon>save</md-icon>
 	</button>
