--- a/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
+++ b/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
@@ -111,7 +111,7 @@
 		</md-card>
 	</div>
 <div>
-<div class="fab-action-button-container">
+<div class="fab-bottom-container">
 	<button md-fab (click)="consoleLog()" mdTooltip="Console Log" mdTooltipPosition="above" class="fab-action-button">
 		<md-icon>assignment</md-icon>
 	</button>
