--- a/client/src/app/components/user-group/user-group-list/user-group-list.component.html
+++ b/client/src/app/components/user-group/user-group-list/user-group-list.component.html
@@ -53,7 +53,7 @@
 		</div>
 	</md-card-content>
 </md-card>
-<div class="fab-action-button-container">
+<div class="fab-bottom-container">
 	<button md-fab (click)="openNewUserGroupDialog()" mdTooltip="Create User Group" mdTooltipPosition="above">
 		<md-icon>add</md-icon>
 	</button>
