--- a/client/src/app/components/user/user-profile/user-profile.component.html
+++ b/client/src/app/components/user/user-profile/user-profile.component.html
@@ -44,7 +44,7 @@
 		</md-card>
 	</div>
 </div>
-<div class="fab-action-button-container">
+<div class="fab-bottom-container">
 	<button md-fab (click)="save()" mdTooltip="Save" mdTooltipPosition="above">
 		<md-icon>save</md-icon>
 	</button>
