--- a/client/src/app/components/directives/pagination/pagination.component.scss
+++ b/client/src/app/components/directives/pagination/pagination.component.scss
@@ -4,7 +4,7 @@
 	font-weight: 500;
 	height: 56px;
 	text-align: right;
-	border-top: 1px solid #E0E0E0;
+	border-top: solid 1px rgba(0,0,0,0.12);
 }
 
 .pagination-nav-button {
