--- a/client/src/app/components/instrument/instrument-type-list/instrument-type-list.component.html
+++ b/client/src/app/components/instrument/instrument-type-list/instrument-type-list.component.html
@@ -95,7 +95,7 @@
 		</div>
 	</md-card-content>
 </md-card>
-<div class="fab-action-button-container">
+<div class="fab-bottom-container">
 	<button md-fab (click)="openNewInstrumentTypeDialog()" mdTooltip="Create Equipment Type" mdTooltipPosition="above">
 		<md-icon>add</md-icon>
 	</button>
