--- a/client/src/app/components/navigation/navigation-base/navigation-base.component.html
+++ b/client/src/app/components/navigation/navigation-base/navigation-base.component.html
@@ -18,15 +18,16 @@
 </md-toolbar>
 <md-sidenav-container fullscreen class="primary-sidenav-container">
 	<md-sidenav #sidenav mode="side" opened="true" class="sidenav-contents">
-		<div >
-			<div class="nav-logo">
+		<div>
+			<div class="nav-logo unselectable">
 				<div>
-					<picture >				
+					<picture>				
 						<img class="la-logo" [src]="citySealUrl"/>			
 					</picture>
 				</div>
-				<div class="nav-logo-text">
-					<font color="white">Bureau of Sanitation</font>	
+				<div class="nav-subtitle flex-container" fxLayout="column" fxLayoutAlign="space-around start">
+					<div class="nav-subtitle-name flex-item">{{userName}}</div>
+					<div class="nav-subtitle-email flex-item">{{userEmail}}</div>
 				</div>
 			<!--</div>
 				<div class="sidenav-section-header">
@@ -56,7 +57,7 @@
 					fxLayout="row"
 					fxLayoutAlign=" center"
 					style="border-bottom: solid 0px lightgray;">
-					<md-icon class="sidenav-link-icon flex-item" fxFlex="64px">{{link.icon}}</md-icon>
+					<md-icon class="sidenav-link-icon flex-item" fxFlex="72px">{{link.icon}}</md-icon>
 					<div class="flex-item" fxFlex>{{link.label}}</div>
 				</div>
 			</div>
