--- a/client/src/app/components/user/user-list/user-list.component.html
+++ b/client/src/app/components/user/user-list/user-list.component.html
@@ -1,5 +1,15 @@
-<md-sidenav-container fullscreen>
-	<md-sidenav #sideinfo mode="side" align="end" (opened)="showSideInfo">Drawer content</md-sidenav>
+<md-sidenav-container  class="sideinfo-container" fullscreen>
+	<md-sidenav #sideinfo mode="side" align="end" (opened)="showSideInfo" class="sidenav-contents">
+		<div style="height:128px;background-color:purple;">
+			User Info
+		</div>
+		<div *ngIf="!selectedUser">
+			Select a user to view their details.
+		</div>
+		<div *ngIf="selectedUser">
+			{{selectedUser.username}}
+		</div>
+	</md-sidenav>
 	<div style="height:calc(100% - 193px);">
 		<div class="fab-top-container">
 			<button md-fab (click)="openNewUserDialog()" mdTooltip="New User" mdTooltipPosition="below">
@@ -95,9 +105,10 @@
 			</div>
 			<div class="data-table-scrollable-area">
 				<div *ngFor="let user of paginatedUsers; let idx = index" class="data-table-row">
-					<div 
-						class="data-table-row-content" flex-container 
-						fxLayout="row">
+					<div class="data-table-row-content flex-container" 
+						fxLayout="row" 
+						(click)="selectUser(user)"
+						[ngClass]="{'data-table-row-content-active': user === selectedUser}">
 						<div class="data-table-first-column truncate flex-item" fxFlex="10">
 							<a [routerLink]="'../user/' + user.username" routerLikeActive="active">
 								{{user.username}}
